Внесена разметка главной страницы
Внесена разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -3,10 +3,138 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+  <!--шапка-->
+  	<header class="main header">
+  		<div class="container">
+  			<div class="index-logo">
+  				<a href="#"></a>
+  			</div>
+  			<nav class="main-navigation">
+  				<ul>
+  					<li>Студия
+  						<a href="#"></a>
+  					</li>
+  					<li>Клиенты
+  						<a href="#"></a>
+  						</li>
+  					<li>Магазин
+  						<a href="#"></a>
+  					</li>
+  					<li>Контакты
+  						<a href="#"></a>
+  					</li>
+  				</ul>
+  			</nav>
+  			<div class="basket">
+  				<a href="#">Корзина</a>
+  			</div>
+  		</div>
+  		<div class="main-slider">
+  			<input type="radio" name="first-slide" id="slide-1" checked="checked">
+  			<label for="slide-1"></label>
+  			<div>
+  				<h1>Долго, дорого, скрупулезно.</h1>
+  				<p>Математически верный дизайн<br>
+  				для вашего сайта или мобильного приложения.</p>
+  			</div>
+  			<input type="radio" name="second-slide" id="slide-2">
+  			<label for="slide-2"></label>
+  			<div>
+  				<h1>Долго, дорого, скрупулезно.</h1>
+  				<p>Математически верный дизайн<br>
+  				для вашего сайта или мобильного приложения.</p>
+  			</div>
+			<input type="radio" name="third-slide" id="slide-3">
+  			<label for="slide-3"></label>
+  			<div>
+  				<h1>Долго, дорого, скрупулезно.</h1>
+  				<p>Математически верный дизайн<br>
+  				для вашего сайта или мобильного приложения.</p>
+  			</div>
+  		</div>
+  	</header>
+  	<!--Основной контент-->
+  	<main class="container">
+	    <section class="features">
+			<div class="features-item">
+	    		<h2>Веб-сайты</h2>
+	    		<p>Мир никогда не будет прежним после того как увидит наш сайт!
+	    		</p>
+	    		<div class="button">
+	    		<input type="submit" name="bth" id="button-1" value="Заказать">
+	    		</div>
+	    	</div>
+	    	<div class="features-item">
+	    		<h2>Приложения</h2>
+	    		<p>Покорите топ-10 приложений в AppStore и Google Play
+	    		</p>
+	    		<div class="button">
+	    		<input type="submit" name="bth" id="button-2" value="Заказать">
+	    		</div>
+	    	</div>
+	    	<div class="features-item">
+	    		<h2>Презентации</h2>
+	    		<p>Вы даже не подозреваете, насколько вы изумительны!
+	    		</p>
+	    		<div class="button">
+	    		<input type="submit" name="bth" id="button-3" value="Заказать">
+	    		</div>
+	    	</div>
+		</section>
+	  	<div class="index-contant">
+	  		<div class="index-contant-left">
+	  			<h1 class="index-contant-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h1>
+	  			<p class="index-contant-info">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+	  			<h3>Выполняем заказы на разработку:</h3>
+	  			<ul class="title-preview">
+			  		<li>Веб-сайтов любой сложности</li>
+			  		<li>Мобильных приложений для iOS и Android</li>
+			  		<li>Слайдшоу и видео для корпоративных презетнаций</li>
+	  			</ul>
+	  		</div>
+	  		<div class="index-cotant-right">
+	  			<h3>С 2004 года любим точность во всем:</h3>
+	  			<b class="index-content-procent">146%</b>
+	  			<p>Уровень самоотдачи</p>	
+	  			<b class="index-content-procent">100%</b>
+	  			<p>Соблюдение сроков</p>
+	  			<b class="index-content-procent">50%</b>
+	  			<p>Минимальная предоплата</p>	
+	  		</div>
+	  	</div>
+	  	<section class="partners">
+	  	</section>
+  	</main>
+  	<!--Блок с картой-->
+  	<div class="map-canvas">
+	  	<div class="map">
+	  	<img src="#" alt="">
+	  	</div>
+	  	<div class="modal-window">
+	  		<h3>Nёrds design studio</h3>
+	  		<p>191186, Санкт-Петербург,<br>
+			ул.Б.Конюшенная, д.19/8
+	  		</p>	
+	  		<p>тел.: +7(812)275-75-75
+	  		</p>
+	  	</div>
+  	</div>
+  	<!--футер-->
+  	<footer class="main-footer">
+  		<div class="container">
+  			<section class="social">
+	  			<a class="social btn social-btn-vk" href="#">Вконтакте</a>
+	  			<a class="social btn social-btn-fb" href="#">Фейсбук</a>
+	  			<a class="social btn social-btn-inst" href="#">Инстаграм</a>
+  			</section>
+  			<div class="footer-title">
+  				<h1>Давайте дружить, это выгодно!</h1>
+  				<p>Скидка 10% для друзей из социальных сетей.</p>
+  			</div>
+  		</div>
+  	</footer>
   </body>
 </html>
