--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<header class="main header">
   		<div class="container">
   			<div class="index-logo">
-  				<a href="#"></a>
+  				<a href="#"><img src="#"></a>
   			</div>
   			<nav class="main-navigation">
   				<ul>
@@ -33,27 +33,40 @@
   			</div>
   		</div>
   		<div class="main-slider">
-  			<input type="radio" name="first-slide" id="slide-1" checked="checked">
-  			<label for="slide-1"></label>
-  			<div>
-  				<h1>Долго, дорого, скрупулезно.</h1>
-  				<p>Математически верный дизайн<br>
-  				для вашего сайта или мобильного приложения.</p>
-  			</div>
-  			<input type="radio" name="second-slide" id="slide-2">
-  			<label for="slide-2"></label>
-  			<div>
-  				<h1>Долго, дорого, скрупулезно.</h1>
-  				<p>Математически верный дизайн<br>
-  				для вашего сайта или мобильного приложения.</p>
-  			</div>
-			<input type="radio" name="third-slide" id="slide-3">
-  			<label for="slide-3"></label>
-  			<div>
-  				<h1>Долго, дорого, скрупулезно.</h1>
-  				<p>Математически верный дизайн<br>
-  				для вашего сайта или мобильного приложения.</p>
-  			</div>
+        <ul>
+          <li class="main-slider-item">
+            <img src="#" alt="">
+            <div class="main-slider-info">
+              <h2>Долго, дорого, скрупулезно.</h2>
+              <p>Математически выверенный дизайн<br>
+              для вашего сайта или мобильного приложения.</p>
+              <a class="main-slider-btn" href="#"></a>
+            </div>
+          </li>
+          <li class="main-slider-item">
+            <img src="#" alt="">
+            <div class="main-slider-info">
+               <h2>Долго, дорого, скрупулезно.</h2>
+              <p>Математически выверенный дизайн<br>
+              для вашего сайта или мобильного приложения.</p>
+              <a class="main-slider-btn" href="#"></a>
+            </div>
+          </li>
+          <li class="main-slider-item">
+            <img src="#" alt="">
+            <div class="main-slider-info">
+              <h2>Долго, дорого, скрупулезно.</h2>
+              <p>Математически выверенный дизайн<br>
+              для вашего сайта или мобильного приложения.</p>
+              <a class="main-slider-btn" href="#"></a>
+            </div>
+          </li>
+        </ul>
+        <div class="main-slider-navigation">
+          <a href="#"></a>
+          <a href=""></a>
+          <a href=""></a>
+        </div>
   		</div>
   	</header>
   	<!--Основной контент-->
@@ -63,31 +76,25 @@
 	    		<h2>Веб-сайты</h2>
 	    		<p>Мир никогда не будет прежним после того как увидит наш сайт!
 	    		</p>
-	    		<div class="button">
-	    		<input type="submit" name="bth" id="button-1" value="Заказать">
-	    		</div>
+          <button class="btn-features-order">Заказать</button>
 	    	</div>
 	    	<div class="features-item">
 	    		<h2>Приложения</h2>
 	    		<p>Покорите топ-10 приложений в AppStore и Google Play
 	    		</p>
-	    		<div class="button">
-	    		<input type="submit" name="bth" id="button-2" value="Заказать">
-	    		</div>
+	    		<button class="btn-features-order">Заказать</button>
 	    	</div>
 	    	<div class="features-item">
 	    		<h2>Презентации</h2>
 	    		<p>Вы даже не подозреваете, насколько вы изумительны!
 	    		</p>
-	    		<div class="button">
-	    		<input type="submit" name="bth" id="button-3" value="Заказать">
-	    		</div>
+	    		<button class="btn-features-order">Заказать</button>
 	    	</div>
 		</section>
-	  	<div class="index-contant">
-	  		<div class="index-contant-left">
-	  			<h1 class="index-contant-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h1>
-	  			<p class="index-contant-info">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+	  	<div class="index-content">
+	  		<div class="index-content-left">
+	  			<h1 class="index-content-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h1>
+	  			<p class="index-content-info">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 	  			<h3>Выполняем заказы на разработку:</h3>
 	  			<ul class="title-preview">
 			  		<li>Веб-сайтов любой сложности</li>
@@ -95,17 +102,21 @@
 			  		<li>Слайдшоу и видео для корпоративных презетнаций</li>
 	  			</ul>
 	  		</div>
-	  		<div class="index-cotant-right">
+	  		<div class="index-cotent-right">
 	  			<h3>С 2004 года любим точность во всем:</h3>
-	  			<b class="index-content-procent">146%</b>
+	  			<b class="index-content-percent">146%</b>
 	  			<p>Уровень самоотдачи</p>	
-	  			<b class="index-content-procent">100%</b>
+	  			<b class="index-content-percent">100%</b>
 	  			<p>Соблюдение сроков</p>
-	  			<b class="index-content-procent">50%</b>
+	  			<b class="index-content-percent">50%</b>
 	  			<p>Минимальная предоплата</p>	
 	  		</div>
 	  	</div>
 	  	<section class="partners">
+	  		<a class="social btn social-btn-htmlac" href="#">Академия</a>
+	  		<a class="social btn social-btn-barbshop" href="#"> Барбершоп</a>
+	  		<a class="social btn social-btn-pink" href="#">Пинк</a>
+	  		<a class="social btn social-btn-mishka" href="#">Мишка</a>
 	  	</section>
   	</main>
   	<!--Блок с картой-->
