Внесение карты и футера
Внесение карты и футера

--- a/catalog.html
+++ b/catalog.html
@@ -89,6 +89,7 @@
   				<button class="btn-sidebar" type="button">Показать</button>
   			</form>
 		</div>
+<!--основной контент-->
   		<div class="index-content">
 			<h2>Сортировать:</h2>
 			<ul>
@@ -130,5 +131,33 @@
         <button class="btn content-next">Следующая</button>
       </div>
   	</main>
+<!--Блок с картой-->
+    <div class="map-canvas">
+      <div class="map">
+        <img src="#" alt="">
+      </div>
+      <div class="modal-window">
+        <h3>Nёrds design studio</h3>
+        <p>191186, Санкт-Петербург,<br>
+      ул.Б.Конюшенная, д.19/8
+        </p>  
+        <p>тел.: +7(812)275-75-75
+        </p>
+      </div>
+    </div>
+<!--футер-->
+    <footer class="main-footer">
+      <div class="container">
+        <section class="social">
+          <a class="social btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social btn social-btn-inst" href="#">Инстаграм</a>
+        </section>
+        <div class="footer-title">
+          <h1>Давайте дружить, это выгодно!</h1>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
