исправление ошибок в img
исправление ошибок в img

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   	<header class="main header">
   		<div class="container">
   			<div class="index-logo">
-  				<a href="#"><img src="#"></a>
+  				<a href="#"><img src="#" alt=""></a>
   			</div>
   			<nav class="main-navigation">
   				<ul>
@@ -106,22 +106,22 @@
   		</div>
       <div class="catalog">
         <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#"></a>
+          <a class="js-modal" href="#"><img src="#" alt=""></a>
         </article>
         <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#"></a>
+          <a class="js-modal" href="#"><img src="#" alt=""></a>
         </article>
         <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#"></a>
+          <a class="js-modal" href="#"><img src="#" alt=""></a>
         </article>
         <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#"></a>
+          <a class="js-modal" href="#"><img src="#" alt=""></a>
         </article>
         <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#"></a>
+          <a class="js-modal" href="#"><img src="#" alt=""></a>
         </article>
         <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#"></a>
+          <a class="js-modal" href="#"><img src="#" alt=""></a>
         </article>
       </div>
       <div class="index-content-btn">
