--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<header class="main header">
   		<div class="container">
   			<div class="index-logo">
-  				<a href="#"><img src="#"></a>
+  				<a href="#"><img src="#" alt=""></a>
   			</div>
   			<nav class="main-navigation">
   				<ul>
@@ -63,7 +63,7 @@
           </li>
         </ul>
         <div class="main-slider-navigation">
-          <a href="#"></a>
+          <a class="current" href="#"></a>
           <a href=""></a>
           <a href=""></a>
         </div>
@@ -122,7 +122,7 @@
   	<!--Блок с картой-->
   	<div class="map-canvas">
 	  	<div class="map">
-	  	<img src="#" alt="">
+	  	  <img src="#" alt="">
 	  	</div>
 	  	<div class="modal-window">
 	  		<h3>Nёrds design studio</h3>
