внесение разметки всплывающего окна у товаров
внесение разметки всплывающего окна у товаров

--- a/catalog.html
+++ b/catalog.html
@@ -107,21 +107,51 @@
       <div class="catalog">
         <article class="catalog-item">
           <a class="js-modal" href="#"><img src="#" alt=""></a>
+          <div class="box-info">
+            <h2 class="box-title">Sedona</h2>
+            <p>Информационный сайт для туристов</p>
+            <button class="btn box-price"> 9 900 руб.</button>
+          </div>
         </article>
         <article class="catalog-item">
           <a class="js-modal" href="#"><img src="#" alt=""></a>
+          <div class="box-info">
+            <h2 class="box-title">Sedona</h2>
+            <p>Информационный сайт для туристов</p>
+            <button class="btn box-price"> 9 900 руб.</button>
+          </div>
         </article>
         <article class="catalog-item">
           <a class="js-modal" href="#"><img src="#" alt=""></a>
+          <div class="box-info">
+            <h2 class="box-title">Sedona</h2>
+            <p>Информационный сайт для туристов</p>
+            <button class="btn box-price"> 9 900 руб.</button>
+          </div>
         </article>
         <article class="catalog-item">
           <a class="js-modal" href="#"><img src="#" alt=""></a>
+          <div class="box-info">
+            <h2 class="box-title">Sedona</h2>
+            <p>Информационный сайт для туристов</p>
+            <button class="btn box-price"> 9 900 руб.</button>
+          </div>
         </article>
         <article class="catalog-item">
           <a class="js-modal" href="#"><img src="#" alt=""></a>
+          <div class="box-info">
+            <h2 class="box-title">Sedona</h2>
+            <p>Информационный сайт для туристов</p>
+            <button class="btn box-price"> 9 900 руб.</button>
+          </div>
         </article>
         <article class="catalog-item">
           <a class="js-modal" href="#"><img src="#" alt=""></a>
+          <div class="box-info">
+            <h2 class="box-title">Sedona</h2>
+            <p>Информационный сайт для туристов</p>
+            <button class="btn box-price"> 9 900 руб.</button>
+          </div>
         </article>
       </div>
       <div class="index-content-btn">
