--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,7 @@
   		<h1 class="index-title">Магазин готовых шаблонов</h1>	
   	</header>
 <!--Основной контент-->
-  	<main class="container">
+  	<div class="container">
   		<div class="sidebar">
   			<form class="sidebar-form">
           <div class="js-range">
@@ -88,79 +88,80 @@
   				</ul>
   				<button class="btn-sidebar" type="button">Показать</button>
   			</form>
-		</div>
-<!--основной контент-->
-  		<div class="index-content">
-			<h2>Сортировать:</h2>
-			<ul>
-				<li>По цене
-				  <a href="#"></a>
-				</li>
-				<li>По типу
-				  <a href="#"></a>
-				</li>
-				<li>По названию
-				  <a href="#"></a>
-				</li>
-			</ul>
-  		</div>
-      <div class="catalog">
-        <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#" alt=""></a>
-          <div class="box-info">
-            <h2 class="box-title">Sedona</h2>
-            <p>Информационный сайт для туристов</p>
-            <button class="btn box-price"> 9 900 руб.</button>
-          </div>
-        </article>
-        <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#" alt=""></a>
-          <div class="box-info">
-            <h2 class="box-title">Sedona</h2>
-            <p>Информационный сайт для туристов</p>
-            <button class="btn box-price"> 9 900 руб.</button>
-          </div>
-        </article>
-        <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#" alt=""></a>
-          <div class="box-info">
-            <h2 class="box-title">Sedona</h2>
-            <p>Информационный сайт для туристов</p>
-            <button class="btn box-price"> 9 900 руб.</button>
-          </div>
-        </article>
-        <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#" alt=""></a>
-          <div class="box-info">
-            <h2 class="box-title">Sedona</h2>
-            <p>Информационный сайт для туристов</p>
-            <button class="btn box-price"> 9 900 руб.</button>
-          </div>
-        </article>
-        <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#" alt=""></a>
-          <div class="box-info">
-            <h2 class="box-title">Sedona</h2>
-            <p>Информационный сайт для туристов</p>
-            <button class="btn box-price"> 9 900 руб.</button>
-          </div>
-        </article>
-        <article class="catalog-item">
-          <a class="js-modal" href="#"><img src="#" alt=""></a>
-          <div class="box-info">
-            <h2 class="box-title">Sedona</h2>
-            <p>Информационный сайт для туристов</p>
-            <button class="btn box-price"> 9 900 руб.</button>
-          </div>
-        </article>
+		  </div>
+      <div class="index-content">
+    		<div class="sort-toglers">
+      			<h2>Сортировать:</h2>
+      			<ul>
+      				<li>По цене
+      				  <a href="#"></a>
+      				</li>
+      				<li>По типу
+      				  <a href="#"></a>
+      				</li>
+      				<li>По названию
+      				  <a href="#"></a>
+      				</li>
+      			</ul>
+        </div>
+        <div class="catalog">
+          <article class="catalog-item">
+            <a class="js-modal" href="#"><img src="#" alt=""></a>
+            <div class="box-info">
+              <h2 class="box-title">Sedona</h2>
+              <p>Информационный сайт для туристов</p>
+              <button class="btn box-price"> 9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-item">
+            <a class="js-modal" href="#"><img src="#" alt=""></a>
+            <div class="box-info">
+              <h2 class="box-title">Sedona</h2>
+              <p>Информационный сайт для туристов</p>
+              <button class="btn box-price"> 9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-item">
+            <a class="js-modal" href="#"><img src="#" alt=""></a>
+            <div class="box-info">
+              <h2 class="box-title">Sedona</h2>
+              <p>Информационный сайт для туристов</p>
+              <button class="btn box-price"> 9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-item">
+            <a class="js-modal" href="#"><img src="#" alt=""></a>
+            <div class="box-info">
+              <h2 class="box-title">Sedona</h2>
+              <p>Информационный сайт для туристов</p>
+              <button class="btn box-price"> 9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-item">
+            <a class="js-modal" href="#"><img src="#" alt=""></a>
+            <div class="box-info">
+              <h2 class="box-title">Sedona</h2>
+              <p>Информационный сайт для туристов</p>
+              <button class="btn box-price"> 9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-item">
+            <a class="js-modal" href="#"><img src="#" alt=""></a>
+            <div class="box-info">
+              <h2 class="box-title">Sedona</h2>
+              <p>Информационный сайт для туристов</p>
+              <button class="btn box-price"> 9 900 руб.</button>
+            </div>
+          </article>
+        </div>
+        <div class="index-content-btn">
+          <button class="btn content-pagination" type="button">1</button>
+          <button class="btn content-pagination" type="button">2</button>
+          <button class="btn content-pagination" type="button">3</button>
+          <button class="btn content-next">Следующая</button>
+        </div>
       </div>
-      <div class="index-content-btn">
-        <button class="btn content-pagination" type="button">1</button>
-        <button class="btn content-pagination" type="button">2</button>
-        <button class="btn content-pagination" type="button">3</button>
-        <button class="btn content-next">Следующая</button>
-      </div>
-  	</main>
+    </div>
 <!--Блок с картой-->
     <div class="map-canvas">
       <div class="map">
