Корректировка кода по замечаниям
Корректировка кода по замечаниям

--- a/index.html
+++ b/index.html
@@ -1,151 +1,153 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-  </head>
-  <body>
-  <!--шапка-->
-  	<header class="main header">
-  		<div class="container">
-  			<div class="index-logo">
-  				<a href="#"><img src="#" alt=""></a>
-  			</div>
-  			<nav class="main-navigation">
-  				<ul>
-  					<li>Студия
-  						<a href="#"></a>
-  					</li>
-  					<li>Клиенты
-  						<a href="#"></a>
-  						</li>
-  					<li>Магазин
-  						<a href="#"></a>
-  					</li>
-  					<li>Контакты
-  						<a href="#"></a>
-  					</li>
-  				</ul>
-  			</nav>
-  			<div class="basket">
-  				<a href="#">Корзина</a>
-  			</div>
-  		</div>
-  		<div class="main-slider">
-        <ul>
-          <li class="main-slider-item">
-            <img src="#" alt="">
-            <div class="main-slider-info">
-              <h2>Долго, дорого, скрупулезно.</h2>
-              <p>Математически выверенный дизайн<br>
-              для вашего сайта или мобильного приложения.</p>
-              <a class="main-slider-btn" href="#"></a>
+</head>
+<body>
+    <!--шапка-->
+    <header class="main header">
+        <div class="container">
+            <div class="index-logo">
+                <a href="#"><img src="#" alt=""></a>
             </div>
-          </li>
-          <li class="main-slider-item">
-            <img src="#" alt="">
-            <div class="main-slider-info">
-               <h2>Долго, дорого, скрупулезно.</h2>
-              <p>Математически выверенный дизайн<br>
-              для вашего сайта или мобильного приложения.</p>
-              <a class="main-slider-btn" href="#"></a>
+            <nav class="main-navigation">
+                <ul>
+                    <li>
+                        <a href="#">Студия</a>
+                    </li>
+                    <li>
+                        <a href="#">Клиенты</a>
+                    </li>
+                    <li>
+                        <a href="#">Магазин</a>
+                    </li>
+                    <li>
+                        <a href="#">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="basket">
+                <a href="#">Корзина</a>
             </div>
-          </li>
-          <li class="main-slider-item">
-            <img src="#" alt="">
-            <div class="main-slider-info">
-              <h2>Долго, дорого, скрупулезно.</h2>
-              <p>Математически выверенный дизайн<br>
-              для вашего сайта или мобильного приложения.</p>
-              <a class="main-slider-btn" href="#"></a>
-            </div>
-          </li>
-        </ul>
-        <div class="main-slider-navigation">
-          <a class="current" href="#"></a>
-          <a href=""></a>
-          <a href=""></a>
         </div>
-  		</div>
-  	</header>
-  	<!--Основной контент-->
-  	<main class="container">
-	    <section class="features">
-			<div class="features-item">
-	    		<h2>Веб-сайты</h2>
-	    		<p>Мир никогда не будет прежним после того как увидит наш сайт!
-	    		</p>
-          <button class="btn-features-order">Заказать</button>
-	    	</div>
-	    	<div class="features-item">
-	    		<h2>Приложения</h2>
-	    		<p>Покорите топ-10 приложений в AppStore и Google Play
-	    		</p>
-	    		<button class="btn-features-order">Заказать</button>
-	    	</div>
-	    	<div class="features-item">
-	    		<h2>Презентации</h2>
-	    		<p>Вы даже не подозреваете, насколько вы изумительны!
-	    		</p>
-	    		<button class="btn-features-order">Заказать</button>
-	    	</div>
-		</section>
-	  	<div class="index-content">
-	  		<div class="index-content-left">
-	  			<h1 class="index-content-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h1>
-	  			<p class="index-content-info">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-	  			<h3>Выполняем заказы на разработку:</h3>
-	  			<ul class="title-preview">
-			  		<li>Веб-сайтов любой сложности</li>
-			  		<li>Мобильных приложений для iOS и Android</li>
-			  		<li>Слайдшоу и видео для корпоративных презетнаций</li>
-	  			</ul>
-	  		</div>
-	  		<div class="index-cotent-right">
-	  			<h3>С 2004 года любим точность во всем:</h3>
-	  			<b class="index-content-percent">146%</b>
-	  			<p>Уровень самоотдачи</p>	
-	  			<b class="index-content-percent">100%</b>
-	  			<p>Соблюдение сроков</p>
-	  			<b class="index-content-percent">50%</b>
-	  			<p>Минимальная предоплата</p>	
-	  		</div>
-	  	</div>
-	  	<section class="partners">
-	  		<a class="social btn social-btn-htmlac" href="#">Академия</a>
-	  		<a class="social btn social-btn-barbshop" href="#"> Барбершоп</a>
-	  		<a class="social btn social-btn-pink" href="#">Пинк</a>
-	  		<a class="social btn social-btn-mishka" href="#">Мишка</a>
-	  	</section>
-  	</main>
-  	<!--Блок с картой-->
-  	<div class="map-canvas">
-	  	<div class="map">
-	  	  <img src="#" alt="">
-	  	</div>
-	  	<div class="modal-window">
-	  		<h3>Nёrds design studio</h3>
-	  		<p>191186, Санкт-Петербург,<br>
-			ул.Б.Конюшенная, д.19/8
-	  		</p>	
-	  		<p>тел.: +7(812)275-75-75
-	  		</p>
-	  	</div>
-  	</div>
-  	<!--футер-->
-  	<footer class="main-footer">
-  		<div class="container">
-  			<section class="social">
-	  			<a class="social btn social-btn-vk" href="#">Вконтакте</a>
-	  			<a class="social btn social-btn-fb" href="#">Фейсбук</a>
-	  			<a class="social btn social-btn-inst" href="#">Инстаграм</a>
-  			</section>
-  			<div class="footer-title">
-  				<h1>Давайте дружить, это выгодно!</h1>
-  				<p>Скидка 10% для друзей из социальных сетей.</p>
-  			</div>
-  		</div>
-  	</footer>
-  </body>
+        <div class="main-slider">
+            <ul>
+                <li class="main-slider-item">
+                    <img src="#" alt="">
+                    <div class="main-slider-info">
+                        <h2>Долго, дорого, скрупулезно.</h2>
+                        <p>Математически выверенный дизайн<br>
+                        для вашего сайта или мобильного приложения.
+                        </p>
+                        <button class="main-slider-btn" href="#"></button>
+                    </div>
+                </li>
+                <li class="main-slider-item">
+                    <img src="#" alt="">
+                    <div class="main-slider-info">
+                        <h2>Долго, дорого, скрупулезно.</h2>
+                        <p>Математически выверенный дизайн<br>
+                        для вашего сайта или мобильного приложения.
+                        </p>
+                        <button class="btn-more">Узнать больше </button>
+                    </div>
+                </li>
+                <li class="main-slider-item">
+                    <img src="#" alt="">
+                    <div class="main-slider-info">
+                        <h2>Долго, дорого, скрупулезно.</h2>
+                        <p>Математически выверенный дизайн<br>
+                        для вашего сайта или мобильного приложения.
+                        </p>
+                        <a class="main-slider-btn" href="#"></a>
+                    </div>
+                </li>
+            </ul>
+            <div class="main-slider-navigation">
+                <a class="first" href="#"></a>
+                <a class="second" href="#"></a>
+                <a class="third" href="#"></a>
+            </div>
+        </div>
+    </header>
+    <!--Основной контент-->
+    <main class="container">
+        <section class="features">
+            <div class="features-item">
+                <h2>Веб-сайты</h2>
+                <p>Мир никогда не будет прежним после того как увидит наш сайт!</p>
+                <a class="features-order" href="#">Заказать</a>
+            </div>
+            <div class="features-item">
+                <h2>Приложения</h2>
+                <p> Покорите топ-10 приложений в AppStore и Google Play</p>
+                <button class="btn-features-order">Заказать</button>
+            </div>
+            <div class="features-item">
+                <h2>Презентации</h2>
+                <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+                <button class="btn-features-order">Заказать</button>
+            </div>
+        </section>
+        <div class="index-content">
+            <div class="index-content-left">
+                <h1 class="index-content-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h1>
+                <p class="index-content-info">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+                <h3>Выполняем заказы на разработку:</h3>
+                <ul class="title-preview">
+                    <li>Веб-сайтов любой сложности</li>
+                    <li>Мобильных приложений для iOS и Android</li>
+                    <li>Слайдшоу и видео для корпоративных презетнаций</li>
+                </ul>
+            </div>
+            <div class="index-cotent-right">
+                <h3>С 2004 года любим точность во всем:</h3>
+                <b class="index-content-percent">146<sup>%</sup></b>
+                <p>Уровень самоотдачи</p>
+                <b class="index-content-percent">100<sup>%</sup></b>
+                <p>Соблюдение сроков</p>
+                <b class="index-content-percent">50<sup>%</sup></b>
+                <p>Минимальная предоплата</p>
+            </div>
+        </div>
+        <section class="partners">
+            <a class="social btn social-btn-htmlac" href="#">Академия</a>
+            <a class="social btn social-btn-barbshop" href="#"> Барбершоп</a>
+            <a class="social btn social-btn-pink" href="#">Пинк</a>
+            <a class="social btn social-btn-mishka" href="#">Мишка</a>
+        </section>
+    </main>
+    <!--Блок с картой-->
+    <div class="map-canvas">
+        <div class="map">
+            <img src="#" alt="">
+        </div>
+        <div class="modal-window">
+            <h3>Nёrds design studio</h3>
+            <p>
+                191186, Санкт-Петербург,<br>
+                ул.Б.Конюшенная, д.19/8
+            </p>
+            <p>
+                тел.: +7(812)275-75-75
+            </p>
+        </div>
+    </div>
+    <!--футер-->
+    <footer class="main-footer">
+        <div class="container">
+            <section class="social">
+                <a class="social btn social-btn-vk" href="#">Вконтакте</a>
+                <a class="social btn social-btn-fb" href="#">Фейсбук</a>
+                <a class="social btn social-btn-inst" href="#">Инстаграм</a>
+            </section>
+            <div class="footer-title">
+                <h1>Давайте дружить, это выгодно!</h1>
+                <p>Скидка 10% для друзей из социальных сетей.</p>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
